Changes to be able to deal with models other than those produced by glm. Corresponding changes to vignette.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 influ
 influ.Rcheck
 influ_*.tar.gz
+*.pdf
+influ_vignette.aux
+influ_vignette.log
+influ_vignette.tex
 
 #Ignore data for vignette
 tre7.csv
